<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.sudu</groupId>
  <artifactId>root-pom</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>demo-edit</module>
    <module>demo-edit-js</module>
    <module>demo-edit-es-module</module>
    <module>web-console-js</module>
    <module>demo-edit-jvm</module>
    <module>graphics</module>
    <module>graphics-common</module>
    <module>graphics-stub</module>
    <module>graphics-js</module>
    <module>graphics-jvm</module>
    <module>graphics-jvm-tests</module>
    <module>wasm-test</module>
    <module>angle-dll</module>
    <module>fonts</module>
    <module>codicon</module>
    <module>demo-test-scenes</module>
    <module>graphics-test</module>
    <module>parser</module>
    <module>diff-model</module>
    <module>parser-generator</module>
  </modules>
  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <project.build.sourceLevel>17</project.build.sourceLevel>

    <teavm.version>0.9.0-SNAPSHOT</teavm.version>
    <jupiter.version>5.9.0</jupiter.version>

    <maven.compiler.version>3.11.0</maven.compiler.version>
    <maven.resource.version>3.3.1</maven.resource.version>
    <maven.warplugin.version>3.4.0</maven.warplugin.version>

    <maven.plugin.validation>DEFAULT</maven.plugin.validation>
  </properties>

</project>
